# ethz-ssl-tabular

./: .gitignore  .pre-commit-config.yaml  01_uncertainty.ipynb  01_uncertainty_svhn-mnist.ipynb  02_uncertainty_office-31.ipynb  LICENSE  README.md  pyproject.toml  utils.py
report/: main.tex  neurips.sty  references.bib
src/: check_dataset.ipynb  log_utils.py  main.py  plot_test_accs.ipynb  run_sweep.py  sweep_pareto.ipynb
src/models/: __init__.py  nn.py  self_training.py  trees.py  uda.py
src/utils/: data.py  logging.py  typing.py
