[tool.poetry]
name = "i2r-active-da"
version = "0.1.0"
description = ""
authors = ["Ng Wei En <weien1292@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
wandb = "^0.15.3"
tqdm = "^4.65.0"
ipykernel = "^6.23.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
poethepoet = "^0.20.0"

[tool.poe.tasks]
force-cuda118 = "pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
